# lab02-pencils-HaitingHuang

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/ui/: colorcanvas.cpp  colorcanvas.h  graycanvas.cpp  graycanvas.h  supportcanvas2d.cpp  supportcanvas2d.h
